Refactor token generation and visualization logic
Replaced hardcoded OpenAI model defaults with configurable options, updated token generation with enhanced validation and error handling, and integrated a new feature for selecting tokens in the visualization component. The frontend now supports dynamic probability graph updates based on token selection, while backend changes improve API request handling and model version flexibility.